fix: horizontal overflow fix on login screen

--- a/src/modules/login/components/Login.module.scss
+++ b/src/modules/login/components/Login.module.scss
@@ -17,6 +17,7 @@
 
 @include respond-to(tablet) {
   .loginContainer {
+    overflow: hidden;
     display: block;
     min-height: 100%;
     // flex-direction: column;
