--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,5 +6,5 @@
 @use "./components/toast";
 
 * {
-  border: thin solid black;
+  box-sizing: border-box;
 }
